--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=1.0
-modid=examplemod
-mod_name=Example Mod
+mod_version=0
+modid=lobbydimension
+mod_name=LobbyDimension
 mc_version=1.16.5
 forge_version=36.2.0
 parch_mapping=2022.03.06
